--- a/PaperDraft/howmany.htm
+++ b/PaperDraft/howmany.htm
@@ -31,6 +31,7 @@
 <li><a href="#depend-on-redundancy-and-repair">Depend on Redundancy and Repair</a></li>
 <li><a href="#corollary-compress-your-documents">Corollary: Compress Your Documents</a></li>
 <li><a href="#compression-reduces-the-target-area-of-a-document">Compression Reduces the Target Area of a Document</a></li>
+<li><a href="#compression-also-offers-other-advantages">Compression Also Offers Other Advantages</a></li>
 </ul></li>
 <li><a href="#protecting-against-a-range-of-threats">Protecting Against a Range of Threats</a><ul>
 <li><a href="#threats-to-content">Threats to Content</a></li>
@@ -39,13 +40,12 @@
 <li><a href="#uncertainties-over-reliability-of-cloud-storage">Uncertainties over Reliability of Cloud Storage</a></li>
 </ul></li>
 </ul></li>
-<li><a href="#recommendation-diversify-across-storage-vendors">Recommendation: Diversify Across Storage Vendors</a></li>
 <li><a href="#modeling-higher-level-threats">Modeling Higher-Level Threats</a><ul>
 <li><a href="#small-changes-in-error-rates-glitches">Small Changes in Error Rates: Glitches</a></li>
 <li><a href="#exceptional-but-realistic-conditions-major-shocks">Exceptional but Realistic Conditions: Major Shocks</a></li>
 <li><a href="#recommendation-storage-vendors-and-locations-must-be-independent">Recommendation: Storage Vendors and Locations Must be Independent</a></li>
-</ul></li>
 <li><a href="#corollary-replicate-keys-when-encrypting-your-documents">Corollary: Replicate Keys when Encrypting Your Documents</a></li>
+</ul></li>
 <li><a href="#recommendation-develop-standards-for-the-benefit-of-all">Recommendation: Develop Standards for the Benefit of All</a><ul>
 <li><a href="#recommendation-collect-and-share-information-on-storage-quality">Recommendation: Collect and Share Information on Storage Quality</a></li>
 <li><a href="#make-auditing-more-efficient.">Make auditing more efficient.</a></li>
@@ -180,7 +180,7 @@ color: black;
 <p>% How Many Copies Is Enough?<br />
 % Micah Altman; Richard Landau<br />
 % 2016-08-15<br />
-% Revised 2018-07-22 RBL</p>
+% Revised 2018-07-26 RBL</p>
 <p>[[Text blocks in double-square-brackets, such as this is, are editorial notes for the authors to clean up.]]</p>
 <h1 id="title" class="unnumbered">Information Integrity Over the Long Term -- How Many Copies Is Enough?</h1>
 <h4 id="assessing-long-term-durability-of-collections-through-a-flexible-replicable-simulation">Assessing Long-term Durability of Collections Through A Flexible, Replicable Simulation</h4>
@@ -317,7 +317,7 @@ color: black;
 <blockquote>
 <h5 id="figure-2-how-percentage-of-collection-lost-over-10-years-as-a-factor-of-both-sector-reliability-and-the-number-of-copies">Figure 2: How percentage of collection lost over 10 years as a factor of both sector reliability and the number of copies</h5>
 </blockquote>
-<p>A modest number of copies, even of very high quality, cannot guarantee archival storage over long periods. As figure 2 show, without auditing, at least nine copies are needed to ensure against sector-level loss for even a period of a decade. Further, significant losses will acculate longer periods. For example, to prevent 1% loss of a collection over 50 years, at least XX copies would be needed. (For more details, <strong>Table A-2</strong> in the appendices shows the expected rates of document errors, over a range of storage copies, and time periods.) A strategy that includes monitoring and repair of documents is required for long-term preservation.</p>
+<p>A modest number of copies, even of very high quality, cannot guarantee archival storage over long periods. As figure 2 show, without auditing, at least nine copies are needed to ensure against sector-level loss for even a period of a decade. Further, significant losses will acculate longer periods. <mark> For example, to prevent 1% loss of a collection over 50 years, at least XX copies would be needed.</mark> (For more details, <strong>Table A-2</strong> in the appendices shows the expected rates of document errors, over a range of storage copies, and time periods.) A strategy that includes monitoring and repair of documents is required for long-term preservation.</p>
 <p>Moreover, even if the media was invulnerable to sector-level errors, a single copy of a collection is vulnerable to large-scale or total loss if that single copy is victim of a disaster, natural or man-made (e.g., earthquake, flood, war, economic depression, administrative error, etc.). As shown in the next section, multiple copies in multiple independent locations are necessary to safeguard documents against this type of large-scale loss.</p>
 <h1 id="recommendation-visit-your-documents-regularly">Recommendation: Visit Your Documents Regularly</h1>
 <p>We should verify and repair the multiple copies of documents on a regular basis. We will use the term <strong><em>auditing</em></strong> to refer to the process of checking documents for validity and repairing where possible any errors discovered.</p>
@@ -341,6 +341,7 @@ color: black;
 <p class="caption">A modest number of copies with total annual auditing can reduce errors to negligible levels</p>
 </div>
 <h5 id="exhibit-nnn-losses-are-reduced-with-annual-auditing.">Exhibit nnn: Losses are reduced with annual auditing.</h5>
+<p><mark>Note: Is 5 sufficient to prevent loss over 50 year periods.</mark></p>
 <h3 id="a-simple-cost-model">A Simple Cost Model</h3>
 <p>TBS NOTE: Where should this section go? Beginning? In the Compression section?</p>
 <p>Many storage vendors may be available to a client, each with charge schedules. For the most part, vendors will charge for storage and bandwidth.</p>
@@ -428,21 +429,26 @@ color: black;
 <img src="../pictures/largerdocs/baseline-scalingdocsize.png" alt="Exhibit nnn: Larger Docs Are More Vulnerable to Random Errors: 5, 50, 500, 5000MB -- !!!MUST BE REDONE!!!" style="width:90.0%" />
 <p class="caption">Exhibit nnn: Larger Docs Are More Vulnerable to Random Errors: 5, 50, 500, 5000MB -- !!!MUST BE REDONE!!!</p>
 </div>
-<p>The table of <strong>Exhibit nnn</strong> shows the relationship between document size and storage error rate. (Error rate is expressed as sector half-life, as explained below.) Note the extremely linear relationship between document size and storage quality. A larger document must reside on a higher quality server to achieve the same loss rate.<br />
-[[PDF captured from spreadsheet, in pictures/docsizevserrorrate/Data_Scaling_DocsizeSpreadsheet-2.pdf]]</p>
+<p>The table of <strong>Exhibit nnn</strong> shows the relationship between document size and storage error rate. (Error rate is expressed as sector half-life, as explained below.) Note the extremely linear relationship between document size and storage quality. A larger document must reside on a higher quality server to achieve the same loss rate. Note that the figures in this table are derived from experiment, not simply from theory. And please recall that storage quality is expressed as sector lifetime (half-life), which is the inverse of the error rate; as the error rate goes up, the sector lifetime goes down. High sector lifetimes are seen in more desirable storage with lower error rates.</p>
+<p>[[PDF captured from spreadsheet, in pictures/docsizevserrorrate/Data_Scaling_DocsizeSpreadsheet-2.pdf]]</p>
 <div class="figure">
 <img src="../pictures/docsizevserrorrate/Scaling_DocsizeLifetimeComparisons_abbrev.png" alt="Exhibit nnn: Linear Relationships Between Document Sizes and Error Rates" style="width:70.0%" />
 <p class="caption">Exhibit nnn: Linear Relationships Between Document Sizes and Error Rates</p>
 </div>
+<p>As can be seen from the figures, larger documents suffer higher loss rates <em>in direct proportion to their size</em>. A ten-times-larger document will suffer the same loss rate as a smaller document only if the smaller document is stored with a ten-times-higher error rate. If the error rates (lifetimes) for storage of the small and large documents are the same, the larger document will be corrupted and lost much more frequently. A smaller file is always a smaller target for random errors.</p>
+<p>The linear increase in document losses based on size is to be expected from straightforward Poisson calculations. In addition, we ran simulations over a wide variety of conditions to verify that this linear relationship holds for multiple copies of collection documents, various auditing strategies, and a very wide range of storage quality (error rates, sector lifetimes).</p>
+<h3 id="compression-also-offers-other-advantages">Compression Also Offers Other Advantages</h3>
+<p>Compression offers another major advantage: potentially higher redudancy. If compression reduces a document's size by, say, 50%, then a client can store two copies of the document for the same cost in storage. That extra copy provides higher redundancy and thus greater resistance to document loss. On a fixed budget, a client can store additional copies of documents depending on how effective the compression algorithm is. High compression permits more copies to be replicated to offset any increased fragility of a compressed document. Text and image compression are particularly effective in this regard.</p>
+<p>Finally, compression permits more aggressive auditing, to protect a collection, without increasing costs. Smaller, compressed documents can be retrieved more quickly without increasing bandwidth, and consume less bandwidth and less egress costs from the storage vendors. Auditing of the collection can be done more frequently on the same budget, which improves document survival rates.</p>
 <p>In summary, we consider lossless compression to be benign for a variety of reasons.</p>
 <ul>
-<li>As already mentioned, smaller documents are smaller targets for errors.<br />
+<li>Smaller documents are smaller targets for errors. They are less likely to corrupted than large documents.<br />
 </li>
-<li>Compression of document copies reduces storage costs. This permits a client to employ more copies for greater redundancy without increasing the price.<br />
+<li>Smaller documents permit higher storage redundancy without increasing costs, thus offering greater protection for the documents in a collection.<br />
 </li>
-<li>Smaller documents consume lower bandwidth for retrieval and editing, lowering egress charges from the storage vendor. This makes the auditing process less expensive.</li>
-<li>A possible drawback is that some methods of compression may require decompression software at client end for document retrieval.</li>
+<li>Smaller documents can be audited more frequently to protect the collection.</li>
 </ul>
+<p>Overall, while compression may increase the fragility of an individual document, it can greatly increase the survival of an entire collection without increasing costs. In all but a few extreme cases, the trade-off favors compression.</p>
 <p>Thus the recommendation, &quot;Compress your documents.&quot;</p>
 <h1 id="protecting-against-a-range-of-threats">Protecting Against a Range of Threats</h1>
 <p>In the previous sections we demonstrate that, in theory, as few as three copies, audited and repaired annually, can preserve information indefinitely -- provided that we can be certain that the storage medium is of reasonably high-quality, and independently distributed sector failures are the only threat to data integrity. In practice, however, the rate of sector loss varies considerably, even within media of the same type and from the same manufacturer. Furthermore, when content is stored over time-spans of a decade or more, a range of additional threats to content must be considered. Moreover, these threats may affect multiple copies at once.</p>
@@ -523,7 +529,7 @@ color: black;
 </ol>
 <p><mark> The Backblaze Blog last week talked about the same fifteen-nines level of reliablity, how they arrived at that number, and why they feel it doesn't matter.<br />
 </mark></p>
-<h1 id="recommendation-diversify-across-storage-vendors">Recommendation: Diversify Across Storage Vendors</h1>
+<h1 id="modeling-higher-level-threats">Modeling Higher-Level Threats</h1>
 <p>The computing facilities from whom we buy storage services are just corporations, and therefore not immortal. They may die for a number of reasons:</p>
 <ul>
 <li>Corporate financial failure;</li>
@@ -533,7 +539,7 @@ color: black;
 <li>Etc.</li>
 </ul>
 <p>To protect a digital collection, we must plan for failures and mergers, and plan ahead for replacements. This recommendation warns us to be aware of the possibilities of, and the impacts of, changes in the corporate landscape; and to be prepared to protect ourselves against such changes.</p>
-<h1 id="modeling-higher-level-threats">Modeling Higher-Level Threats</h1>
+<p>In order to protect ourselves, we need to identify both the potential threats that can cause correlated failure and to model potential impact of those threats on our replication and auditing strategies.</p>
 <h4 id="small-changes-in-error-rates-glitches">Small Changes in Error Rates: Glitches</h4>
 <p>The error rate of a storage device or storage server is not necessarily constant. The rate can vary over time for a variety of reasons. One reason is the &quot;bathtub curve&quot; phenomenon [[citations needed]]. In this study, we have examined other varying conditions under the general heading of <em>glitches</em>.</p>
 <ul>
@@ -576,14 +582,13 @@ color: black;
 <li>Multiple copies kept in one facility: a client might keep two or more copies of a collection in the same server room or IT infrastructure. In such a case, the copies are not sufficiently independent to be considered really redundant.</li>
 </ul>
 <p>This recommendation warns us to monitor carefully the true independence of the services to which we commit our valuable documents.</p>
-<h1 id="corollary-replicate-keys-when-encrypting-your-documents">Corollary: Replicate Keys when Encrypting Your Documents</h1>
-<p><mark>Note: the main point is that one can model loss of encryption keys as a separate, small collection. Loss of that collection implies loss of the larger collection. The main threat is &quot;shocks&quot; to the set of &quot;servers&quot; that retain copies of the keys. </mark></p>
-<p>The recommendation, &quot;Cloak your documents&quot; tries to meet the needs of some collections for privacy. Encryption of documents may be required for secrecy, digital rights management, or other reasons. If a document is encrypted after it has been compressed, the encryption generally does not impose an additional size burden on the document. Thus encryption does not compromise the advantage gained by compression, though it does have some impact on potential document losses.</p>
-<ul>
-<li>An encrypted document is more fragile in the sense that it, if damaged by an error, it may not be recoverable even with extraordinary efforts. (Contrast with text documents, still photo, video, and audio files.)</li>
-<li>A collection of encrypted documents is more subject to large shocks, associated failures where multiple servers are immediately affected. E.g., losing the encryption keys can cause all the copies on several servers to be irretrievable.</li>
-</ul>
-<p>Encrypted documents, like compressed documents, may have a greater need for storage redundancy, auditing, and repair because of their increased fragility.</p>
+<h2 id="corollary-replicate-keys-when-encrypting-your-documents">Corollary: Replicate Keys when Encrypting Your Documents</h2>
+<p>We identified loss of encryption keys as a threat to content in section XXX above. In this section we discuss strategies for evaluating the impact of encryption key loss, and mitigating these risks. As it turns out, it is not necessay to add encyrption directly to the discrete simulation model described above -- we can evaluate this risk using the existing model.</p>
+<p>Encrypting a collection of content creates three additional threats of loss. First, and most important, losing all copies of the encryption keys for the collection effectively results in a loss of all replicas of the collection -- while the bits comprising such collections may continue to exist, they are rendered meaningless. Second, if the knowledge of the encryption algorithm is lost, the collection is likewise destroyed. Third, encryption may make documents more fragile -- a single block loss will destroy the entire document rather than a portion.</p>
+<p>The last threat (fragility) has a minor impact (see section XXX discussing compression and fragility) and is readily mitigated, if necessary, by adding an additional copy to the replication scheme. The second threat (algorithm loss) can be effectively mitigated by selecting a well-known standard encryption algorithms -- standard algorithms are widely documented, and indepently replicated. Thus, we focus on the threats from loss of encryption keys.</p>
+<p>Loss of encryption key may be modeled by treating the keys as a small, separate collection of documents. As we have shown above -- mitigating risks of loss to a collection requires replication, auditing, and repair. For security reasons, encryption keys should be kept in separate administrative domains than the content they encrypt. We recommend that a separate set of 'servers' be used to replicate the collection of encryption keys.</p>
+<p>Because the size of the collection is small (encryption keys are very small relative to the content they collect), risks to the collection of keys will be dominated by 'shocks' that disrupt organizations and affect multiple replicas. For example -- wars, economic recessions, and government actions may lead to organizational failures.</p>
+<p>Summarizing section XXX, above -- XXX independent copies, audited annually, are sufficient to prevent loss from an extensive range of severe external shocks. We thus conclude that one should maintain copies of encryption keys (or equivalent redundancy using secret-sharing methods [CITE]), distributed across across XXX independent organizations.</p>
 <h1 id="recommendation-develop-standards-for-the-benefit-of-all">Recommendation: Develop Standards for the Benefit of All</h1>
 <h3 id="recommendation-collect-and-share-information-on-storage-quality">Recommendation: Collect and Share Information on Storage Quality</h3>
 <ul>
